Implement Liveness Detection (Phase 2): - Create LivenessDetector state machine in @glow/face - Create NativeDetector MLKit wrapper in @glow/face - Create LivenessOverlay UI component in Glow Pro app - Update CertifiedCamera to use react-native-vision-camera with liveness check - Update Pro app dependencies and Expo config plugins

--- a/protocol/apps/pro/app.json
+++ b/protocol/apps/pro/app.json
@@ -28,11 +28,14 @@
     "plugins": [
       "expo-router",
       [
-        "expo-camera",
+        "react-native-vision-camera",
         {
-          "cameraPermission": "Glow Pro needs camera access for certified medical photography."
+          "cameraPermissionText": "Glow Pro needs camera access for certified medical photography.",
+          "enableMicrophonePermission": false,
+          "enableLocationPermission": false
         }
-      ]
+      ],
+      "react-native-reanimated/plugin"
     ]
   }
 }
