--- a/protocol/apps/pro/package.json
+++ b/protocol/apps/pro/package.json
@@ -16,8 +16,11 @@
     "@glow/types": "workspace:*",
     "@glow/watermark": "workspace:*",
     "expo": "~52.0.0",
-    "expo-camera": "~16.0.0",
     "expo-constants": "~17.0.0",
+    "react-native-vision-camera": "^4.0.0",
+    "react-native-reanimated": "^3.0.0",
+    "react-native-worklets-core": "^1.0.0",
+    "@infinitered/react-native-mlkit-face-detection": "^1.0.0",
     "expo-file-system": "~18.0.0",
     "expo-router": "~4.0.0",
     "expo-status-bar": "~2.0.0",
